--- a/projects.html
+++ b/projects.html
@@ -77,33 +77,34 @@
             <a href="https://github.com/bencoleman24/Climate-Change-Statistical-Analysis" class="project-link"><i class="fab fa-github"></i> Link</a>
         </div>
         <div class="project">
-            <h3><a href="russia_ukraine_article.html" class="project-title-link">An Overview of the Russia-Ukraine War and Its Global Economic Consequences</a></h3>
+            <h3><a href="https://issuu.com/uwequilibrium.com/docs/eq_volume_13_spread_" class="project-title-link">An Overview of the Russia-Ukraine War and Its Global Economic Consequences</a></h3>
             <ul>
                 <li>Wrote an article on the Russia-Ukraine conflict and its global economic consequences, published in the Spring 2023 issue of Equilibrium - UW-Madison Undergraduate Journal of Economics.</li>
                 <li>Researched and analyzed the economic impacts of the conflict, with a focus on global financial systems, trade, and economic stability.</li>
             </ul>
-            <a href="https://issuu.com/uwequilibrium.com/docs/eq_volume_13_spread_" class="project-link"><i class="fas fa-book"></i> Read the Article (Page 45)</a>
+            <a href="https://issuu.com/uwequilibrium.com/docs/eq_volume_13_spread_" class="project-link"><i class="fas fa-book"></i> Read the Article</a>
         </div>
-                <div class="project">
-            <h3><a href="ai_projects.html" class="project-title-link">Introduction to Artificial Intelligence Projects</a></h3>
+            <div class="project">
+            <h3><a href="https://github.com/bencoleman24/Intro-to-Big-Data-Systems" class="project-title-link">Introduction to Big Data Systems Projects</a></h3>
             <ul>
-                <li>Collection of projects from the Introduction to Artificial Intelligence course at UW-Madison (Spring 2024).</li>
-                <li>Covered foundational AI topics, including reinforcement learning, clustering, neural networks, and more.</li>
-            </ul>
-            <a href="https://github.com/bencoleman24/Intro-to-AI-Projects" class="project-link"><i class="fab fa-github"></i> Link</a>
-        </div>
-                    <div class="project">
-            <h3><a href="big_data_systems.html" class="project-title-link">Introduction to Big Data Systems Projects</a></h3>
-            <ul>
-                <li>Collection of projects from the Introduction to Big Data Systems course at UW-Madison (Spring 2023).</li>
+                <li>Collection of projects from the Introduction to Big Data Systems course at UW-Madison.</li>
                 <li>Worked with various big data technologies, including Docker, Hadoop, Spark, and Cassandra, all set up on a Google Cloud VM using Ubuntu 22.04 LTS.</li>
+                <li>Gained practical experience in managing distributed systems and processing large-scale data.</li>
             </ul>
             <a href="https://github.com/bencoleman24/Intro-to-Big-Data-Systems" class="project-link"><i class="fab fa-github"></i> Link</a>
         </div>
+        <div class="project">
+            <h3><a href="https://github.com/bencoleman24/Intro-to-AI-Projects" class="project-title-link">Introduction to Artificial Intelligence Projects</a></h3>
+            <ul>
+                <li>Collection of projects from the Introduction to Artificial Intelligence course at UW-Madison (Spring 2024).</li>
+                <li>Covered foundational AI topics, including reinforcement learning, clustering, and neural networks.</li>
+                <li>Worked on implementing AI algorithms and exploring their real-world applications.</li>
+            </ul>
+            <a href="https://github.com/bencoleman24/Intro-to-AI-Projects" class="project-link"><i class="fab fa-github"></i> Link</a>
+        </div>
 
-    </section>
-
-    <footer>
+</section>
+<footer>
         <p>&copy; 2024 Benjamin Coleman</p>
     </footer>
 </body>
