--- a/projects.html
+++ b/projects.html
@@ -102,6 +102,14 @@
             </ul>
             <a href="https://github.com/bencoleman24/Intro-to-AI-Projects" class="project-link"><i class="fab fa-github"></i> Link</a>
         </div>
+        <div class="project">
+            <h3><a href="about.html" class="project-title-link">My Portfolio (this website)</a></h3>
+            <ul>
+                <li>Created website to display my projects and experience.</li>
+                <li>Assumed the role of project management and built it utilizing prompt engineering (ChatGPT).</li>
+            </ul>
+            <a href="https://github.com/bencoleman24/bencoleman24.github.io/tree/master" class="project-link"><i class="fab fa-github"></i> Link</a>
+        </div>
 
 </section>
 <footer>
