--- a/projects.html
+++ b/projects.html
@@ -106,7 +106,7 @@
             <h3><a href="about.html" class="project-title-link">My Portfolio (this website)</a></h3>
             <ul>
                 <li>Created website to display my projects and experience.</li>
-                <li>Assumed the role of project management and built it utilizing advanced prompt engineering (ChatGPT)😉.</li>
+                <li>Assumed the role of project manager and built it utilizing advanced prompt engineering (ChatGPT)😉.</li>
             </ul>
             <a href="https://github.com/bencoleman24/bencoleman24.github.io/tree/master" class="project-link"><i class="fab fa-github"></i> Link</a>
         </div>
