--- a/projects.html
+++ b/projects.html
@@ -84,7 +84,7 @@
             </ul>
             <a href="https://issuu.com/uwequilibrium.com/docs/eq_volume_13_spread_" class="project-link"><i class="fas fa-book"></i> Read the Article</a>
         </div>
-            <div class="project">
+        <div class="project">
             <h3><a href="https://github.com/bencoleman24/Intro-to-Big-Data-Systems" class="project-title-link">Introduction to Big Data Systems Projects</a></h3>
             <ul>
                 <li>Collection of projects from the Introduction to Big Data Systems course at UW-Madison.</li>
@@ -106,15 +106,11 @@
             <h3><a href="about.html" class="project-title-link">My Portfolio (this website)</a></h3>
             <ul>
                 <li>Created website to display my projects and experience.</li>
-                <li>Assumed the role of project manager and built it utilizing advanced prompt engineering (ChatGPT)😉.</li>
+                <li>Assumed the role of project manager and built it utilizing advanced prompt engineering (ChatGPT) 💡.</li>
             </ul>
             <a href="https://github.com/bencoleman24/bencoleman24.github.io/tree/master" class="project-link"><i class="fab fa-github"></i> Link</a>
         </div>
 
-</section>
-<footer>
+    </section>
+    <footer>
         <p>&copy; 2024 Benjamin Coleman</p>
-    </footer>
-</body>
-
-</html>
