--- a/projects.html
+++ b/projects.html
@@ -13,7 +13,7 @@
     <header class="detailed-header">
         <div class="header-content">
             <h1>Benjamin Coleman</h1>
-            <p>Aspiring Data Scientist</p>
+            <p>Master's Student, Aspiring Data Scientist</p>
             <p class="location">Chicago | Boston</p>
             <div class="contact-links">
                 <a href="mailto:benbcoleman08@gmail.com"><i class="fas fa-envelope"></i> Email</a>
