--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <p>Hello! I have a passion and curiosity for using data to solve real-world problems and uncovering hidden insights. I’m currently a Data Science masters student at Boston University and a research assistant in the Math & Stats department. I spend most of my time learning, researching, exercising, and playing abstract strategy games. I’m actively seeking out roles in Data Science, Analytics, Data Engineering, and related roles.</p>
             <h2 class="section-title">Education</h2>
         <div class="education">
-            <p><strong>Boston University</strong> - M.S. in Data Science (Expected May 2025 or December 2025)</p>
+            <p><strong>Boston University</strong> - M.S. in Data Science (Expected Graduation: May 2025 or December 2025)</p>
             <p><strong>University of Wisconsin–Madison</strong> - B.S. in Data Science and Economics (Graduated Spring 2024)</p>
         </div>
         
