--- a/about.html
+++ b/about.html
@@ -8,7 +8,18 @@
     <title>About - Benjamin Coleman</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    </head>
+
+    <!-- Google Analytics Tracking Code -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-EDMCKK2SN0"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-EDMCKK2SN0');
+    </script>
+    <!-- End Google Analytics Tracking Code -->
+    
+</head>
 
 <body>
     <header class="detailed-header">
