--- a/projects.html
+++ b/projects.html
@@ -91,6 +91,17 @@
             </ul>
             <a href="https://issuu.com/uwequilibrium.com/docs/eq_volume_13_spread_" class="project-link"><i class="fas fa-book"></i> Read the Article</a>
         </div>
+        
+        </div>
+        <div class="project">
+            <h3><a href="https://www.wgbh.org/news/local/2024-12-16/a-state-agency-that-issues-student-loans-has-sued-thousands-of-borrowers" class="project-title-link">GBH Investigations: Debt Collection Court (Researcher)</a></h3>
+            <ul>
+                <li>Fall 2024 semester long project through BU Spark! working on data analytics and research for GBH article on MA debt student loan debt collection practices. </li>
+                <li>Project included client presentations, analytics, research, programming, visualization, and database navigation. </li>
+            </ul>
+            <a href="https://www.wgbh.org/news/local/2024-12-16/a-state-agency-that-issues-student-loans-has-sued-thousands-of-borrowers" class="project-link"><i class="fas fa-book"></i> Read the Article</a>
+        </div>
+        
         <div class="project">
             <h3><a href="https://github.com/bencoleman24/Intro-to-Big-Data-Systems" class="project-title-link">Introduction to Big Data Systems Projects</a></h3>
             <ul>
