--- a/projects.html
+++ b/projects.html
@@ -48,6 +48,18 @@
             <a href="https://github.com/bencoleman24/Music-Recommendation-Website" class="project-link"><i class="fab fa-github"></i> Link</a>
         </div>
         <div class="project">
+
+        <h2 class="section-title">Projects</h2>
+        <div class="project">
+            <h3><a href="epidemic_engine.html" class="project-title-link">Epidemic Engine</a></h3>
+            <ul>
+                <li>Developed a end to end pipeline of an epidemic engine. The system reads simulated health events in real-time and stores them, vizualizes them in a live updating dashboard, and makes ML anomoly predictions.</li>
+                <li>Tools and Technologies include Python, PySparkML, Kafka, Docker, PostgreSQL, Flask</li>
+            </ul>
+            <a href="https://github.com/bencoleman24/Music-Recommendation-Website" class="project-link"><i class="fab fa-github"></i> Link</a>
+        </div>
+            
+        <div class="project">
             <h3><a href="green_space_explorer.html" class="project-title-link">Green Space Explorer (Backend and ML)</a></h3>
             <ul>
                 <li>Developed a prototype of a full-stack web application that allows users to discover parks and green spaces in their area through a generation of an interactive map.</li>
