--- a/projects.html
+++ b/projects.html
@@ -52,7 +52,7 @@
         <div class="project">
             <h3><a href="epidemic_engine.html" class="project-title-link">Epidemic Engine</a></h3>
             <ul>
-                <li>Developed a end to end pipeline of an epidemic engine. The system reads simulated health events in real-time and stores them, vizualizes them in a live updating dashboard, and makes ML anomoly predictions.</li>
+                <li>Developed a end to end pipeline of an epidemic engine. The system reads simulated health events in real-time and stores them, vizualizes them in a live updating dashboard, and makes ML anomaly predictions.</li>
                 <li>Tools and Technologies include Python, PySparkML, Kafka, Docker, PostgreSQL, Flask</li>
             </ul>
             <a href="https://github.com/bencoleman24/Epidemic_Engine" class="project-link"><i class="fab fa-github"></i> Link</a>
