--- a/epidemic_engine.html
+++ b/epidemic_engine.html
@@ -28,7 +28,7 @@
 
         <section id="overview">
             <h2>Overview</h2>
-            <p>The Epidemic Engine is an integrated system designed to ingest, process, and analyze real-time health event data. Leveraging tools like Kafka, PostgreSQL, and PySpark, it enables anomaly detection through machine learning and provides live data visualization via a dynamic dashboard.</p>
+            <p>The Epidemic Engine is an integrated system designed to ingest, process, and analyze real-time health event data. It uses Kafka, PostgreSQL, and PySpark, it enables anomaly detection through machine learning and provides live data visualization via a dynamic dashboard hosted locally.</p>
         </section>
 
         <section id="key-components">
@@ -48,7 +48,7 @@
             <h2>Features</h2>
             <ul>
                 <li>End-to-end pipeline integrating real-time data ingestion, storage, analysis, and visualization.</li>
-                <li>Live dashboard updated every 10 seconds with new streamed data.</li>
+                <li>Live dashboard updated every 30 seconds with new streamed data.</li>
                 <li>High-accuracy anomaly detection using a pre-trained ML model.</li>
                 <li>Interactive visualizations for insights into health event trends and anomalies.</li>
             </ul>
