--- a/projects.html
+++ b/projects.html
@@ -49,7 +49,7 @@
         </div>
 
         <div class="project">
-            <h3><a href="epidemic_engine.html" class="project-title-link">Epidemic Engine</a></h3>
+            <h3><a href="epidemic_engine.html" class="project-title-link">Epidemic Engine Data Pipeline</a></h3>
             <ul>
                 <li>Developed a end to end pipeline of an epidemic engine. The system reads simulated health events in real-time and stores them, vizualizes them in a live updating dashboard, and makes ML anomaly predictions.</li>
                 <li>Tools and Technologies include Python, PySparkML, Kafka, Docker, PostgreSQL, Flask</li>
