--- a/epidemic_engine.html
+++ b/epidemic_engine.html
@@ -13,7 +13,7 @@
     <div class="container">
         <header class="detailed-header">
             <div class="header-content">
-                <h1>Epidemic Engine</h1>
+                <h1>Epidemic Engine Data Pipeline</h1>
                 <div class="contact-links">
                     <a href="https://github.com/bencoleman24/Epidemic_Engine" class="project-link"><i class="fab fa-github"></i> GitHub Repo</a>
                 </div>
