--- a/music_recommendation.html
+++ b/music_recommendation.html
@@ -34,12 +34,11 @@
 
         <section id="features">
             <h2 class="section-title">Features</h2>
-            <ul>
-                <li><strong>Model Selection:</strong> Choose from 4 recommendation models to tailor the experience.</li>
-                <li><strong>Feedback Mechanism:</strong> After viewing recommendations, users can provide feedback on the quality of recommendations, helping improve the system further.</li>
-                <li><strong>Spotify Song Links:</strong> Each song recommendation comes with a Spotify link, taking the user directly to the song.</li>
-            </ul>
+            <p>
+                The features of the system include the ability to select from four recommendation models, allowing users to tailor their experience. A feedback mechanism is incorporated, enabling users to provide input on the quality of recommendations after viewing them, which helps improve the system over time. Additionally, each song recommendation is accompanied by a Spotify link, allowing users to access the song directly.
+            </p>
         </section>
+
 
         <section id="tech-stack">
             <h2 class="section-title">Technical Stack</h2>
