--- a/nba_allstar_projections.html
+++ b/nba_allstar_projections.html
@@ -34,12 +34,11 @@
 
         <section id="features">
             <h2 class="section-title">Features</h2>
-            <ul>
-                <li><strong>Data Analysis:</strong> Leveraged historical player performance metrics and team success data to inform predictions.</li>
-                <li><strong>Statistical Modeling:</strong> Applied regression, classification, and hyperparameter tuning techniques to create predictive models.</li>
-                <li><strong>Model Evaluation:</strong> Evaluated the model's performance, achieving a prediction accuracy of 70.8% for the All-Star selections.</li>
-            </ul>
+            <p>
+                The project features included leveraging historical player performance metrics and team success data to inform predictions. Statistical modeling techniques such as regression, classification, and hyperparameter tuning were applied to create predictive models. The model's performance was thoroughly evaluated, achieving a prediction accuracy of 70.8% for the All-Star selections.
+            </p>
         </section>
+
 
         <section id="technologies">
             <h2 class="section-title">Technologies Used</h2>
