--- a/green_space_explorer.html
+++ b/green_space_explorer.html
@@ -33,14 +33,11 @@
 
         <section id="features">
             <h2 class="section-title">Features</h2>
-            <ul>
-                <li><strong>Interactive Map:</strong> Utilizes the Google Maps API to locate and explore green spaces in your vicinity.</li>
-                <li><strong>User Ratings and Posts:</strong> Users can share experiences and rate green spaces, helping others discover new locations.</li>
-                <li><strong>Secure User Management:</strong> Safeguards user credentials using advanced hashing techniques before storage in our MySQL database.</li>
-                <li><strong>Dynamic Content Sharing:</strong> Users can post comments and rate parks.</li>
-                <li><strong>Machine Learning:</strong> Developed two AI components: a content moderation system using a pre-trained model, and a park scoring feature incorporating sentiment analysis from user comments.</li>
-            </ul>
+            <p>
+                This project includes an interactive map that utilizes the Google Maps API to locate and explore green spaces in your vicinity. Users can share their experiences and rate green spaces, helping others discover new locations. Secure user management is implemented by safeguarding user credentials with advanced hashing techniques before storing them in a MySQL database. The platform also supports dynamic content sharing, allowing users to post comments and rate parks. Additionally, two AI components were developed: a content moderation system using a pre-trained model and a park scoring feature that incorporates sentiment analysis from user comments.
+            </p>
         </section>
+
 
         <section id="tech-stack">
             <h2 class="section-title">Technologies Used</h2>
