--- a/climate_analysis.html
+++ b/climate_analysis.html
@@ -34,13 +34,11 @@
 
         <section id="features">
             <h2 class="section-title">Key Analyses</h2>
-            <ul>
-                <li><strong>Temperature Trends:</strong> Analyzed historical temperature data to detect long-term patterns and anomalies.</li>
-                <li><strong>Emissions Data:</strong> Examined the relationship between emissions and temperature using econometric techniques.</li>
-                <li><strong>Forecasting:</strong> Utilized Seasonal ARIMA, Multiple Linear Regression, Random Forests, and Lasso Regression for forecasting temperature and emissions trends.</li>
-                <li><strong>Model Evaluation:</strong> Compared model performance to assess the best predictive methods for climate-related data.</li>
-            </ul>
+            <p>
+                This analysis included examining historical temperature data to detect long-term patterns and anomalies. The relationship between emissions and temperature was explored using econometric techniques. Forecasting methods such as Seasonal ARIMA, Multiple Linear Regression, Random Forests, and Lasso Regression were employed to predict temperature and emissions trends. Finally, model performance was evaluated to determine the most effective predictive methods for climate-related data.
+            </p>
         </section>
+
 
         <section id="technologies">
             <h2 class="section-title">Technologies Used</h2>
