--- a/amazon_sentiment.html
+++ b/amazon_sentiment.html
@@ -39,12 +39,11 @@
 
         <section id="features">
             <h2 class="section-title">Features</h2>
-            <ul>
-                <li><strong>Advanced Sentiment Analysis:</strong> Utilizes NLP techniques to determine the sentiment of user reviews, gathering key takeaways and numeric sentiment score values.</li>
-                <li><strong>Insightful Data Visualization:</strong> Generates clear, intuitive charts and graphs to represent the data, making it easy to understand overall sentiment trends.</li>
-                <li><strong>Comprehensive Reporting:</strong> Produces detailed PDF reports summarizing the findings, complete with visual aids and key takeaways.</li>
-            </ul>
+            <p>
+                This project features advanced sentiment analysis, utilizing NLP techniques to determine the sentiment of user reviews and providing key takeaways along with numeric sentiment score values. It includes insightful data visualization, generating clear and intuitive charts and graphs to represent the data, making overall sentiment trends easy to understand. Additionally, it offers comprehensive reporting by producing detailed PDF reports that summarize findings, complete with visual aids and key takeaways.
+            </p>
         </section>
+
 
         <section id="example-report">
             <h2 class="section-title">Example Report</h2>
