--- a/amazon_sentiment.html
+++ b/amazon_sentiment.html
@@ -80,17 +80,15 @@
         <section id="tools">
             <h2 class="section-title">Tools and Technologies</h2>
             <h3>Report Generation</h3>
-            <ul>
-                <li><strong>Matplotlib & Seaborn:</strong> Used to create charts and graphs for visualization.</li>
-                <li><strong>ReportLab:</strong> Used for generating the final PDF report, allowing for complex layouts, embedding visualizations, statistics, and text.</li>
-            </ul>
+            <p>
+                For report generation, Matplotlib and Seaborn were used to create charts and graphs for visualization. ReportLab was employed to generate the final PDF report, enabling complex layouts and the embedding of visualizations, statistics, and text.
+            </p>
             <h3>Analysis</h3>
-            <ul>
-                <li><strong>Hugging Face Transformers:</strong> The primary tool for sentiment analysis, known for their state-of-the-art performance in NLP tasks.</li>
-                <li><strong>TextBlob:</strong> Supplementary tool for aggregate sentiment analysis, providing a polarity score to represent the overall sentiment tone of a text.</li>
-                <li><strong>OpenAI API:</strong> Leveraged for additional NLP tasks, such as summarizing key points from reviews.</li>
-            </ul>
+            <p>
+                The analysis utilized Hugging Face Transformers as the primary tool for sentiment analysis, known for their state-of-the-art performance in NLP tasks. TextBlob served as a supplementary tool for aggregate sentiment analysis, providing a polarity score to represent the overall sentiment tone of a text. Additionally, the OpenAI API was leveraged for other NLP tasks, such as summarizing key points from reviews.
+            </p>
         </section>
+
 
         <footer>
             <p>&copy; 2024 Benjamin Coleman</p>
