--- a/projects.html
+++ b/projects.html
@@ -38,6 +38,17 @@
 
     <section id="projects">
         <h2 class="section-title">Projects</h2>
+        
+        <div class="project">
+            <h3><a href="#" class="project-title-link">RL Economic Simulator</a></h3>
+            <p style="font-style: italic; color: #888;">This project is currently in development, planning to post by Feb 2025.</p>
+            <ul>
+                <li>Developing an interactive market economy simulation where agents (individuals, businesses, and governments) adapt and learn strategies using reinforcement learning.</li>
+                <li>Tools and Technologies: Python, Reinforcement Learning algorithms, Economic Modeling, interactive vizualisations.</li>
+            </ul>
+        </div>
+
+        
         <div class="project">
             <h3><a href="music_recommendation.html" class="project-title-link">Music Recommendation Website</a></h3>
             <ul>
