--- a/projects.html
+++ b/projects.html
@@ -44,7 +44,7 @@
             <p style="font-style: italic; color: #888;">This project is currently in development, planning to post by Feb 2025.</p>
             <ul>
                 <li>Developing an interactive market economy simulation where agents (individuals, businesses, and governments) adapt and learn strategies using reinforcement learning.</li>
-                <li>Tools and Technologies: Python, Reinforcement Learning algorithms, Economic Modeling, interactive vizualisations.</li>
+                <li>Python, Reinforcement Learning algorithms, Economic Modeling, Interactive Vizualisations.</li>
             </ul>
         </div>
 
