--- a/about.html
+++ b/about.html
@@ -52,6 +52,10 @@
         
         <h2 class="section-title">Recent Experience</h2>
         <div class="experience">
+            <h3>Graduate Teaching Assistant - Boston University</h3>
+            <p><strong>January 2025 - Present</strong><br>Responsible for leading weekly discussion sections to support student understanding and encourage active engagement with course material. Assisted with grading assignments and maintained open communication with students and the professor to address questions and provide feedback effectively.</p>
+        </div>
+        <div class="experience">
             <h3>Graduate Research Assistant - Boston University</h3>
             <p><strong>August 2024 - Present</strong><br>Contributing to the development and analysis of stochastic gradient algorithms focusing on optimizing learning rates and uncertainty quantification.</p>
         </div>
