--- a/amazon_sentiment.html
+++ b/amazon_sentiment.html
@@ -14,7 +14,7 @@
         <header class="detailed-header">
             <div class="header-content">
                 <h1>Amazon Product Sentiment Report Generator</h1>
-                <p>A prototype tool to speed up, automate, and improve the decision-making process of purchasing a product online.</p>
+                <p>A prototype tool to automate and improve the decision making process of purchasing a product online.</p>
                 <div class="contact-links">
                     <a href="https://github.com/bencoleman24/AmazonSentimentalReports" class="project-link"><i class="fab fa-github"></i> GitHub Repo</a>
                 </div>
