--- a/projects.html
+++ b/projects.html
@@ -40,10 +40,13 @@
         <h2 class="section-title">Projects</h2>
         
         <div class="project">
-            <h3><a href="https://www.rlcitysim.com" class="project-title-link">RL Economic Simulator</a></h3>
+            <h3><a href="https://www.rlcitysim.com" class="project-title-link">Reinforcement Learning City Simulator Simulator</a></h3>
             <ul>
-                <li>Developing an interactive market economy simulation where agents (individuals, businesses, and governments) adapt and learn strategies using reinforcement learning.</li>
-                <li>Python, Reinforcement Learning algorithms, Economic Modeling, Interactive Visualizations.</li>
+                <li>Developed an interactive market economy city simulation where reinforcement-learning government agent that sets taxes, invests in infrastructure, and funds subsidies.</li>
+                <li>Households, raw material firms, manufacturers, and retailers interact to form a dynamic economy.</li>
+                <li>This city is customizable - users can customize city parameters (like tax policy or cost of living) and government RL agents.</li>
+                <li>This project is accessible to anyone - website includes a React frontend and a Flask backend which trains and runs the simulation in real time.</li>
+
             </ul>
             <a href="https://github.com/bencoleman24/Reinforcement-Learning-City-Simulation" class="project-link"><i class="fab fa-github"></i> Link</a>
         </div>
