--- a/projects.html
+++ b/projects.html
@@ -40,15 +40,17 @@
         <h2 class="section-title">Projects</h2>
         
         <div class="project">
-            <h3><a href="https://www.rlcitysim.com" class="project-title-link">Reinforcement Learning City Simulator Simulator</a></h3>
+            <h3><a href="https://www.rlcitysim.com" class="project-title-link">Reinforcement Learning City Simulator</a></h3>
             <ul>
-                <li>Developed an interactive market economy city simulation where reinforcement-learning government agent that sets taxes, invests in infrastructure, and funds subsidies.</li>
+                <li>Developed an interactive market economy city simulation where a reinforcement-learning government agent sets taxes, invests in infrastructure, and funds subsidies.</li>
                 <li>Households, raw material firms, manufacturers, and retailers interact to form a dynamic economy.</li>
                 <li>This city is customizable - users can customize city parameters (like tax policy or cost of living) and government RL agents.</li>
-                <li>This project is accessible to anyone - website includes a React frontend and a Flask backend which trains and runs the simulation in real time.</li>
-
+                <li>This project is accessible to anyone - website includes a React frontend and a Flask backend which trains and runs the simulation in real-time.</li>
             </ul>
-            <a href="https://github.com/bencoleman24/Reinforcement-Learning-City-Simulation" class="project-link"><i class="fab fa-github"></i> Link</a>
+            <div class="project-links">
+                <a href="https://www.rlcitysim.com" class="project-link">Visit the Website</a>
+                <a href="https://github.com/bencoleman24/Reinforcement-Learning-City-Simulation" class="project-link"><i class="fab fa-github"></i> GitHub Link</a>
+            </div>
         </div>
 
         <div class="project">
